 - API: CGridArea/CWorkingArea will not replace a maximized dockable by another dockable in any case

[v1.1.1]
 - Bugfix: in the conversion from CSetting to CPerspective the location of invisible CDockables was ignored
 - API: VetoableDockRelocatorEvent now also tells the location of the mouse
 - API: WizardSplitDockStation can now show a gap on the side where it is moveable, the default size of the gap is set to 3

[v1.1.2p1]
 ! API: Added method "isEnabled" to ExpandableToolbarItem and all associated listeners.
 - API: ToolbarItemDockable.isEnabled now returns false if there is no ToolbarItem to show in some state
 - API: Toolbar/ToolbarContainer/ToolbarGroupDockStation now all support custom background painting (with keys ThemeManager.BACKGROUND_PAINT + ".station.toolbar"/".station.toolbar.container"/".station.toolbar.group")
 - Bugfix: Sometimes a child of a ScreenDockStation could not be moved by the WindowMover because the DockRelocator consumed the MouseEvents.
 - API: The DefaultExpandableToolbarItemStrategy is now set as default, meaning expanded-toolbar-items are now available per default.

[v1.1.2p1a]
 - API: WizardSplitDockStation has a new property "resizeOnRemove", if set the size of a column is automatically reset if one of its children is removed
 - Bugfix: WizardSplitDockStation sometimes did not allow moving the divider if the internal tree of Dockables had placeholders at the wrong locations
 - API: AbstractScreenDockWindow will call checkWindowBounds if the minimum size of its content changes.
 - Bugfix: When removing a Dockable from a column of a WizardSplitDockStation, the column kept its current size *including* the size of the Span
 - Bugfix: Moving a Dockable from one column of a WizardSplitDockStation to another now updates the size of the column from which the Dockable was removed.
 - Bugfix: Layout of ToolbarGroupDockStation could not be properly saved. 
     
[Todo]
- Drop StackDockStation over Dockable and merge them